# OpenKonst_B

./: .env.example  .gitignore  IMPROVEMENTS.md  LICENSE  README.md  TRAINING_IMPROVEMENTS.md  UPGRADES.md  UPGRADES_SUMMARY.md  pyproject.toml
artifacts/: final_report.json  last_chat_report.json  last_chat_report.md  last_chat_report_session_20260508_200128.json  last_chat_report_session_20260512_113536.json  last_chat_report_session_20260512_114521.md  last_chat_report_state.json
config/: default.yaml  policy.yaml
data/: agent_memory.db
src/coding_agent/: __init__.py
src/coding_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/coding_agent/api/: app.py  schemas.py
src/coding_agent/cli/: main.py
src/coding_agent/config/: loader.py  settings.py
src/coding_agent/core/: bootstrap.py  context.py  orchestrator.py  planner.py  repo_scan.py  session.py  verifier.py
src/coding_agent/llm/: base.py  ollama_provider.py  openai_compatible_provider.py  prompt_builder.py  vllm_provider.py
src/coding_agent/memory/: models.py  retrieval.py  store.py  summarizer.py
src/coding_agent/sandbox/: __init__.py  command_policy.py  shell_runner.py  workspace_guard.py
src/coding_agent/tools/: file_tools.py  git_tools.py  memory_tools.py  patch_tools.py  search_tools.py
src/coding_agent/util/: errors.py  json_utils.py  logging.py
tests/: test_chat_mode.py  test_cli_repo_scan.py  test_file_tools.py  test_git_tools.py  test_json_utils.py  test_memory_store.py  test_ollama_provider.py  test_orchestrator_smoke.py  test_shell_runner.py  test_workspace_guard.py
